Fixed maven plugin module compile level issue and a bug where dot was not converted to slash.